# art-of-fpga-season-2

./: .gitignore  .gitmodules  LICENSE  README.md  hdldepends_config.toml
package/: array_package.vhd  filter_package.vhd  standard_package.vhd
post_5_single_rate_non_sym_fir/: README.md  fir_single_rate_non_symmetric_filter_taps_package.vhd  fir_single_rate_non_symmetric_taps_package.vhd  fir_single_rate_non_symmetric_transpose.vhd  fir_single_rate_non_symmetric_transpose_pipelined.vhd  post_5_generate_taps.py
post_5_single_rate_non_sym_fir/tb/: README.md  compile_order.txt  create_vivado_project.sh  fir_single_rate_non_symmetric_filter_taps_package.vhd  fir_single_rate_non_symmetric_transpose_pipelined.py  fir_single_rate_non_symmetric_transpose_pipelined.sh  post_5_generate_taps.py  simulate_nvc_cocotb.sh
post_6_single_rate_even_symmetric_fir/: README.md  fir_single_rate_even_symmetric.vhd  fir_single_rate_even_symmetric_taps_package.vhd  post_6_generate_taps.py
post_6_single_rate_even_symmetric_fir/tb/: README.md  create_vivado_project.sh  (+2 more)
post_7_single_rate_odd_symmetric_fir/: README.md  fir_single_rate_odd_symmetric.vhd  fir_single_rate_odd_symmetric_taps_package.vhd  post_7_generate_taps.py
post_8_single_rate_symmetric_transpose/: README.md  fir_single_rate_even_symmetric_pipelined_taps_package.vhd  fir_single_rate_even_symmetric_transpose.vhd  fir_single_rate_even_symmetric_transpose_pipelined.vhd  post_8_generate_even_taps.py
python/: README.md  pyproject.toml
python/py_art_of_fpga/: utils.py
scripts/: sim_argparse.sh  sim_dir_setup.sh
(+11 files in other folders)
